# NALDA_video_stream

./: CMakeLists.txt  Main.qml  README.md  main.cpp
